--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "mn80:14.4": "‚Von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.‘ ",
   "mn80:14.5": "Herr Gotama, von den Sinnen stammen die Sinnenfreuden. Jenseits der Sinnenfreuden ist die Freude, die das Sinnliche übersteigt; sie gilt als die beste davon.“ ",
   "mn80:14.6": "„it’s hard for to understand, da du eine andere Ansicht, ein anderes Bekenntnis und einen anderen Glauben hast, ist es schwer für dich, ",
-  "mn80:14.7": "die Sinne, Sinnenfreuden und die Freude, die das Sinnliche übersteigt, zu verstehen, es sei denn, du weihst dich der Übung unter Anleitung der Tradition. "
+  "mn80:14.7": "die Sinne, Sinnenfreuden und die Freude, die das Sinnliche übersteigt, zu verstehen, es sei denn, du weihst dich der Übung unter Anleitung der Tradition. ",
+  "mn80:14.8": "Es gibt Mönche und Nonnen, die vollendet sind, die die Befleckungen aufgelöst, das geistliche Leben erfüllt und getan haben, was zu tun war, die Last abgelegt, ihr eigenes wahres Ziel erreicht, die die Fessel des fortgesetzten Daseins endgültig gelöst haben und durch Erleuchtung richtig befreit sind. Sie können "
 }
