--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "mn80:14.7": "die Sinne, Sinnenfreuden und die Freude, die das Sinnliche übersteigt, zu verstehen, es sei denn, du weihst dich der Übung unter Anleitung der Tradition. ",
   "mn80:14.8": "Es gibt Mönche und Nonnen, die vollendet sind, die die Befleckungen aufgelöst, das geistliche Leben erfüllt und getan haben, was zu tun war, die Last abgelegt, ihr eigenes wahres Ziel erreicht, die die Fessel des fortgesetzten Daseins endgültig gelöst haben und durch Erleuchtung richtig befreit sind. ",
   "mn80:14.9": "Sie können die Sinne, Sinnenfreuden und die Freude, die das Sinnliche übersteigt, verstehen.“ ",
-  "mn80:15.1": "Auf diese Worte wurde Vekhanasa zornig und aufgebracht. Er fiel sogar über den Buddha selbst her und zerriss sich das Maul über ihn: "
+  "mn80:15.1": "Auf diese Worte wurde Vekhanasa zornig und aufgebracht. Er fiel sogar über den Buddha selbst her und zerriss sich das Maul über ihn: ",
+  "mn80:15.2": "„Der Asket Gotama wird geschlagen werden!“ Er sagte zum Buddha: "
 }
