--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "mn80:15.3": "„Genauso ergeht es manchen Asketen und Brahmanen. Obwohl sie die Vergangenheit nicht erkennen und die Zukunft nicht sehen, behaupten sie dennoch: ",
   "mn80:15.4": "‚Wir verstehen: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt nichts weiter für dieses hier.“‘ ",
   "mn80:15.5": "Ihre Aussage erweist sich als Witz – bloße Worte, gehaltlos und hohl.“ ",
-  "mn80:16.1": "„Kaccāna, es gibt manche Asketen und Brahmanen, die, obwohl sie die Vergangenheit nicht erkennen und die Zukunft nicht sehen, dennoch behaupten: "
+  "mn80:16.1": "„Kaccāna, es gibt manche Asketen und Brahmanen, die, obwohl sie die Vergangenheit nicht erkennen und die Zukunft nicht sehen, dennoch behaupten: ",
+  "mn80:16.2": "‚Wir verstehen: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt nichts weiter für dieses hier.“‘ "
 }
