--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig9.1:0.2": "Девять строф ",
   "thig9.1:0.3": "Ваддхамату Тхери (мать Ваддхи) ",
   "thig9.1:1.1": "Ваддха, в этот мир не вовлекайся ты. ",
-  "thig9.1:1.3": "Сын мой, вновь и вновь "
+  "thig9.1:1.3": "Сын мой, вновь и вновь ",
+  "thig9.1:1.4": "Страданий на себя не навлекай! "
 }
