--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -6,5 +6,6 @@
   "thig9.1:1.3": "Сын мой, вновь и вновь ",
   "thig9.1:1.4": "Страданий на себя не навлекай! ",
   "thig9.1:2.1": "В счастье, Ваддха, пребывают мудрые, ",
-  "thig9.1:2.2": "Те, кто отбросил колебанья; "
+  "thig9.1:2.2": "Те, кто отбросил колебанья; ",
+  "thig9.1:2.3": "Бестрепетные, достигшие Прохлады, <j>Затихшие, "
 }
