--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -10,5 +10,6 @@
   "thig9.1:2.3": "Бестрепетные, достигшие Прохлады, <j>Затихшие, ",
   "thig9.1:2.4": "Отринувшие все влеченья. ",
   "thig9.1:3.1": "О Ваддха, взращивай тот путь, ",
-  "thig9.1:3.2": "Которым следуют отшельники, "
+  "thig9.1:3.2": "Которым следуют отшельники, ",
+  "thig9.1:3.3": "Дабы обрести видение, "
 }
