--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti110:4.1": "sta seduto, ",
   "iti110:5.1": "o sta sdraiato, a un cercatore desto appaiono pensieri sensuali, avversi o crudeli*, ",
   "iti110:5.2": "e quel cercatore li tollera, non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, ",
-  "iti110:5.3": "allora quel cercatore desto è detto uno indolente, senza timore, sempre costantemente pigro, e con poca forza. ",
+  "iti110:5.3": "allora quel cercatore desto è detto uno indolente, senza timore, sempre continuamente pigro, e con poca forza. ",
   "iti110:6.1": "Se mentre cammina, ",
   "iti110:7.1": "sta in piedi, ",
   "iti110:8.1": "sta seduto, ",
