--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "mn80:16.1": "„Kaccāna, es gibt manche Asketen und Brahmanen, die, obwohl sie die Vergangenheit nicht erkennen und die Zukunft nicht sehen, dennoch behaupten: ",
   "mn80:16.2": "‚Wir verstehen: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt nichts weiter für dieses hier.“‘ ",
   "mn80:16.3": "Es gibt eine rechtmäßige Art, sie zu widerlegen. ",
-  "mn80:16.4": "Aber Kaccāna, lass die Vergangenheit und die Zukunft beiseite. "
+  "mn80:16.4": "Aber Kaccāna, lass die Vergangenheit und die Zukunft beiseite. ",
+  "mn80:16.5": "Da mag ein vernünftiger Mensch kommen, nicht verschlagen oder hinterhältig, ein aufrichtiger Mensch: Ich lehre ihn und leite ihn an. "
 }
