--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "mn80:16.2": "‚Wir verstehen: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt nichts weiter für dieses hier.“‘ ",
   "mn80:16.3": "Es gibt eine rechtmäßige Art, sie zu widerlegen. ",
   "mn80:16.4": "Aber Kaccāna, lass die Vergangenheit und die Zukunft beiseite. ",
-  "mn80:16.5": "Da mag ein vernünftiger Mensch kommen, nicht verschlagen oder hinterhältig, ein aufrichtiger Mensch: Ich lehre ihn und leite ihn an. "
+  "mn80:16.5": "Da mag ein vernünftiger Mensch kommen, nicht verschlagen oder hinterhältig, ein aufrichtiger Mensch: Ich lehre ihn und leite ihn an. ",
+  "mn80:16.6": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: "
 }
