--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -12,6 +12,6 @@
   "thig9.1:3.1": "О Ваддха, взращивай тот путь, ",
   "thig9.1:3.2": "Которым следуют отшельники, ",
   "thig9.1:3.3": "Дабы обрести в_и_дение, ",
-  "thig9.1:3.4": "Страданьям положить конец. ",
+  "thig9.1:3.4": "Страданьям положить конец». ",
   "thig9.1:4.1": "« "
 }
