--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig9.1:3.3": "Дабы обрести в_и_дение, ",
   "thig9.1:3.4": "Страданьям положить конец». ",
   "thig9.1:4.1": "«О мама, говоришь ты так убеждённо, ",
-  "thig9.1:4.3": "Верю: "
+  "thig9.1:4.3": "Верю: ",
+  "thig9.1:4.4": "Нет в тебе никакой вовлечённости. "
 }
