--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,5 @@
   "thig9.1:4.1": "«О мама, говоришь ты так убеждённо, ",
   "thig9.1:4.3": "Верю: ",
   "thig9.1:4.4": "Нет в тебе никакой вовлечённости». ",
-  "thig9.1:5.1": "« "
+  "thig9.1:5.1": "«О Ваддха, для меня нет больше составных явлений, "
 }
