--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig9.1:4.4": "Нет в тебе никакой вовлечённости». ",
   "thig9.1:5.1": "«О Ваддха, для меня нет больше составных явлений, ",
   "thig9.1:5.3": "Ни малых, ни больших, ни средних, ",
-  "thig9.1:5.4": "Вовлечённость во мне исчезла. "
+  "thig9.1:5.4": "Вовлечённость во мне исчезла. ",
+  "thig9.1:6.1": "Все загрязнения окончены "
 }
