--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig9.1:5.3": "Ни малых, ни больших, ни средних, ",
   "thig9.1:5.4": "Вовлечённость во мне исчезла. ",
   "thig9.1:6.1": "Все загрязнения окончены ",
-  "thig9.1:6.2": "Во мне — усердной, погружённой в джхану. "
+  "thig9.1:6.2": "Во мне — усердной, погружённой в джхану. ",
+  "thig9.1:6.3": "Три знания открылись для меня, "
 }
