--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -21,5 +21,6 @@
   "thig9.1:5.4": "Вовлечённость во мне исчезла. ",
   "thig9.1:6.1": "Все загрязнения окончены ",
   "thig9.1:6.2": "Во мне — усердной, погружённой в джхану. ",
-  "thig9.1:6.3": "Три знания открылись для меня, "
+  "thig9.1:6.3": "Три знания открылись для меня, ",
+  "thig9.1:6.4": "Заветы Татхагаты мной исполнены всецело. "
 }
