--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "mn80:16.3": "Es gibt eine rechtmäßige Art, sie zu widerlegen. ",
   "mn80:16.4": "Aber Kaccāna, lass die Vergangenheit und die Zukunft beiseite. ",
   "mn80:16.5": "Da mag ein vernünftiger Mensch kommen, nicht verschlagen oder hinterhältig, ein aufrichtiger Mensch: Ich lehre ihn und leite ihn an. ",
-  "mn80:16.6": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: "
+  "mn80:16.6": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: ",
+  "mn80:16.7": "‚So ist man also richtig von der Fessel befreit, nämlich der Fessel der Unwissenheit.‘ "
 }
