--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -24,5 +24,6 @@
   "thig9.1:6.3": "Три знания открылись для меня, ",
   "thig9.1:6.4": "Заветы Татхагаты мной исполнены всецело». ",
   "thig9.1:7.1": "Поистине чудесно то, ",
-  "thig9.1:7.2": "Как мать вдохновляла меня, "
+  "thig9.1:7.2": "Как мать вдохновляла меня, ",
+  "thig9.1:7.3": "Как изрекла те строфы о предназначенье высшем "
 }
