--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig9.1_translation-ru-narinyanievmenenko.json
@@ -27,5 +27,6 @@
   "thig9.1:7.2": "Как мать вдохновляла меня, ",
   "thig9.1:7.3": "Как изрекла те строфы о предназначенье высшем ",
   "thig9.1:7.4": "Из сострадания. ",
-  "thig9.1:8.1": "Слова эти услышав, "
+  "thig9.1:8.1": "Слова эти услышав, ",
+  "thig9.1:8.2": "Матерью моею изречённые, "
 }
