--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti110:10.2": "x ",
   "iti110:10.3": "se pensa un pensiero ",
   "iti110:10.4": "cattivo relativo alla vita laica, ",
-  "iti110:11.1": "praticando per la cattiva strada, ",
+  "iti110:11.1": "è caduto nella strada sbagliata, ",
   "iti110:11.2": "infatuato/fissato con cose che portano alla fissazione??? ",
   "iti110:11.3": "x ",
   "iti110:11.4": "x ",
