--- a/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn80_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "mn80:16.9": "Wenn er heranwächst und seine Fähigkeiten reifen heran, wird er entsprechend von diesen Fesseln erlöst. ",
   "mn80:16.10": "Er wüsste: ‚Ich bin erlöst‘, und es gäbe keine Fesseln mehr. ",
   "mn80:16.11": "Ebenso mag da ein vernünftiger Mensch kommen, nicht verschlagen oder hinterhältig, ein aufrichtiger Mensch: Ich lehre ihn und leite ihn an. ",
-  "mn80:16.12": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: "
+  "mn80:16.12": "Wenn er gemäß der Anleitung übt, wird er bald selbst erkennen und sehen: ",
+  "mn80:16.13": "‚So ist man also richtig von der Fessel befreit, nämlich der Fessel der Unwissenheit.‘“ "
 }
