--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -20,7 +20,7 @@
   "iti110:11.1": "è caduto nella strada sbagliata, ",
   "iti110:11.2": "è infatuato con cose che portano all’illusione. ",
   "iti110:11.3": "un tale cercatore è incapace ",
-  "iti110:11.4": "x ",
+  "iti110:11.4": "di raggiungere (ottenere) la suprema illuminazione. ",
   "iti110:12.1": "Chiunque sia in cammino che in piedi, ",
   "iti110:12.2": "seduto o sdraiato, ",
   "iti110:12.3": "avendo placato il pensiero, ",
