--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti110:2.2": "",
   "iti110:2.3": "",
   "iti110:3.1": "sta in piedi, ",
-  "iti110:4.1": "sta seduto, ",
+  "iti110:4.1": "si siede, ",
   "iti110:5.1": "o sta sdraiato, a un cercatore desto appaiono pensieri sensuali, avversi o crudeli*, ",
   "iti110:5.2": "e quel cercatore li tollera, non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, ",
   "iti110:5.3": "allora quel cercatore desto è detto uno indolente, senza timore, sempre e continuamente indolente, debole. ",
