--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti110:5.3": "allora quel cercatore desto è detto uno indolente, senza timore, sempre e continuamente indolente, debole. ",
   "iti110:6.1": "Se mentre cammina, ",
   "iti110:7.1": "sta in piedi, ",
-  "iti110:8.1": "sta seduto, ",
+  "iti110:8.1": "si siede, ",
   "iti110:9.1": "o sta sdraiato, a un cercatore desto appaiono pensieri sensuali, avversi e crudeli, ",
   "iti110:9.2": "e quel cercatore non li tollera, ma li lascia andare, li butta fuori, li porta a termine e li oblitera, ",
   "iti110:9.3": "allora quel cercatore desto è detto uno ardente, timorato, sempre in continuo rinvigorimento, risoluto. ",
