--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti111:9.2": "fino a dove arriva la terra ",
   "iti111:9.3": "esaminando il Dhamma, ",
   "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** ",
-  "iti111:10.1": "Vivendo così zelante ",
+  "iti111:10.1": "Vivendo così zelante, ",
   "iti111:10.2": "in serenità, non arrogante ",
   "iti111:10.3": "alla corretta tranquillità del cuore ",
   "iti111:10.4": "si allena sempre consapevole ",
