--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti111:8.3": "controllato mentre si piega, ",
   "iti111:8.4": "controllato mentre si allunga. ",
   "iti111:9.1": "In alto, al centro e in basso, ",
-  "iti111:9.2": "fino a dove arriva la terra ",
+  "iti111:9.2": "fin dove si estende la terra ",
   "iti111:9.3": "esaminando il Dhamma, ",
   "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** ",
   "iti111:10.1": "Vivendo così zelante, ",
