--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti111:8.1": "Controllato mentre cammina, controllato mentre sta in piedi, ",
   "iti111:8.2": "controllato mentre si siede, controllato mentre si sdraia. ",
   "iti111:8.3": "controllato mentre si piega, ",
-  "iti111:8.4": "controllato mentre si allunga. ",
+  "iti111:8.4": "controllato mentre si allunga, ",
   "iti111:9.1": "In alto, al centro e in basso, ",
   "iti111:9.2": "fin dove si estende la terra, ",
   "iti111:9.3": "esaminando il Dhamma, ",
