--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti111:3.1": "Quando vivrete così, che altro dovrete fare di superiore? ",
   "iti111:4.1": "Se mentre cammina, sta in piedi, si siede o si sdraia, un cercatore è libero da smania, avversione, torpore, agitazione e rimorso, ha abbandonato il dubbio, è strenuo e attivo, ha una consolidata consapevolezza/vigilanza, è senza confusione, ha il corpo tranquillo, è senza agitazione con la mente raccolta e unificata, ",
   "iti111:4.2": "allora quel cercatore è detto uno ardente, timorato, sempre in continuo rinvigorimento, risoluto. ",
-  "iti111:8.1": "Controllato mentre cammina, controllato mentre sta in piedi, ",
+  "iti111:8.1": "Controllato cammina, controllato  sta in piedi, ",
   "iti111:8.2": "controllato mentre si siede, controllato mentre si sdraia. ",
   "iti111:8.3": "controllato mentre si piega, ",
   "iti111:8.4": "controllato mentre si allunga, ",
