--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti111:4.2": "allora quel cercatore è detto uno ardente, timorato, sempre in continuo rinvigorimento, risoluto. ",
   "iti111:8.1": "Controllato cammina, controllato  sta in piedi, ",
   "iti111:8.2": "controllato si siede, controllato si sdraia. ",
-  "iti111:8.3": "controllato mentre si piega, ",
+  "iti111:8.3": "controllato si piega, ",
   "iti111:8.4": "controllato mentre si allunga, ",
   "iti111:9.1": "in alto, al centro e in basso, ",
   "iti111:9.2": "fin dove si estende la terra, ",
