--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti111:8.2": "controllato si siede, controllato si sdraia. ",
   "iti111:8.3": "controllato si piega, ",
   "iti111:8.4": "controllato si allunga ",
-  "iti111:9.1": "in alto, al centro e in basso, ",
+  "iti111:9.1": "in alto, verso il centro e verso il basso, ",
   "iti111:9.2": "fin dove si estende la terra, ",
   "iti111:9.3": "esamina il Dhamma, ",
   "iti111:9.4": "l’ascesa e la caduta delle cinque cataste (khandha). ** ",
