--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti111:8.4": "controllato si allunga ",
   "iti111:9.1": "in alto, verso il centro e verso il basso, ",
   "iti111:9.2": "fin dove si estende la terra, ",
-  "iti111:9.3": "esamina il Dhamma, ",
+  "iti111:9.3": "quel cercatore esamina il Dhamma, ",
   "iti111:9.4": "l’ascesa e la caduta delle cinque cataste (khandha). ** ",
   "iti111:10.1": "Vivendo così ardente, ",
   "iti111:10.2": "in serenità, non arrogante ",
