--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti111:10.1": "Vivendo così ardente, ",
   "iti111:10.2": "in serenità, non arrogante ",
   "iti111:10.3": "si addestra in quello che conduce alla tranquillità del cuore ",
-  "iti111:10.4": "sempre vigile/consapevole si addestra, ",
+  "iti111:10.4": "sempre vigile/consapevole, ",
   "iti111:10.5": "sempre risoluto, ",
   "iti111:10.6": "è chiamato uno di tale qualità. "
 }
